refactor: add logging to requireTagByName and extract helpers in TagService; keep behavior unchanged